# macroer

./: CMakeLists.txt  README.md
scripts/: build.bat  build.sh  run.bat  run.sh  test.bat  test.sh
src/: EditorWindow.cpp  EditorWindow.hpp  config.hpp  config.hpp.in  example.cpp  getExecutableName.cpp  getExecutableName.hpp  main.cpp
